--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         child.project.url.inherit.append.path="false">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.powsybl</groupId>
@@ -28,10 +29,10 @@
         </license>
     </licenses>
 
-    <scm>
+    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false">
         <connection>scm:git:https://github.com/powsybl/powsybl-parent.git</connection>
         <developerConnection>scm:git:https://github.com/powsybl/powsybl-parent.git</developerConnection>
-        <url>https://github.com/powsybl/powsybl-parent/</url>
+        <url>https://github.com/powsybl/powsybl-parent/tree/master/</url>
     </scm>
 
     <developers>
@@ -50,7 +51,7 @@
     </developers>
 
     <properties>
-        <maven.core.version>3.3.9</maven.core.version>
+        <maven.core.version>3.6.1</maven.core.version>
 
         <maven.gpg.version>1.6</maven.gpg.version>
         <maven.resources.version>3.1.0</maven.resources.version>
